include(platform_driver_ethercatTaskLib)
ADD_LIBRARY(${PLATFORM_DRIVER_ETHERCAT_TASKLIB_NAME} SHARED
    ${PLATFORM_DRIVER_ETHERCAT_TASKLIB_SOURCES})

add_dependencies(${PLATFORM_DRIVER_ETHERCAT_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${PLATFORM_DRIVER_ETHERCAT_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${PLATFORM_DRIVER_ETHERCAT_TASKLIB_DEPENDENT_LIBRARIES})

SET_TARGET_PROPERTIES(${PLATFORM_DRIVER_ETHERCAT_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${PLATFORM_DRIVER_ETHERCAT_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${PLATFORM_DRIVER_ETHERCAT_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${PLATFORM_DRIVER_ETHERCAT_TASKLIB_HEADERS}
    DESTINATION include/orocos/platform_driver_ethercat)
